# ODDArchiver

./: .gitignore  DesignDoc.md  README.md  feature_list.json  pyproject.toml  requirements.txt  run.py
docs/: GUIDE.md  bugs.md  cache.md  cli.md  configuration.md  delta.md  disc.md  encryption.md  idempotency.md  logging.md  manifest.md  mirror.md  overview.md  quickstart.md  restore.md  security.md  session.md  testing.md  verify.md
oddarchiver/: __init__.py  __main__.py  cache.py  cli.py  config.py  crypto.py  delta.py  disc.py  log.py  manifest.py  restore.py  session.py  verify.py
serverIdea/: DesignDoc.md
tests/: test_cache.py  test_cli.py  test_cli_e2e.py  test_config.py  test_crypto.py  test_delta.py  test_disc.py  test_dryrun.py  test_idempotency.py  test_integration.py  test_logging.py  test_manifest.py  test_mirror.py  test_restore.py  test_scaffolding.py  test_security.py  test_session.py  test_stress.py  test_verify.py
