[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oddarchiver"
version = "0.1.0"
description = "Incremental delta-compressed backups to write-once optical media."
authors = [{ name = "Richard Baldwin", email = "eyeclept@pm.me" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
encrypt = [
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
]

[project.scripts]
oddarchiver = "oddarchiver.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oddarchiver*"]
